# flight-price-scraper

./: README.md
flight-price-scraper/: .gitignore  README.md  pyproject.toml
flight-price-scraper/.github/workflows/: tests.yml
flight-price-scraper/docs/: SELECTORS_CHECKLIST.md
flight-price-scraper/notebooks/: 01_eda.ipynb
flight-price-scraper/reports/: report_template.md
flight-price-scraper/src/flight_scraper/: __init__.py  __main__.py  config.py  eda.py  parser.py  scraper.py  storage.py
flight-price-scraper/tests/: test_parser.py  test_storage.py
