[project]
name = "flight-price-scraper"
version = "0.2.0"
description = "FHNW Mini-Challenge LO4: Selenium-Scraping Booking.com Flights."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "selenium>=4.20",
  "pandas>=2.2",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/flight_scraper"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
